<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:hfc="http://schemas.android.com/apk/res/cn.com.xxys.tour"
	android:orientation="vertical" android:layout_width="wrap_content"
	android:layout_height="fill_parent">
	<ImageView android:id="@+id/titleDivider"
		android:layout_width="300dp" android:layout_height="1dip"
		android:scaleType="fitXY" android:gravity="fill_horizontal"
		android:src="@drawable/dialog_divider_horizontal_light"
		android:layout_marginBottom="30dip" />
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/WaitForDownload"
		android:gravity="center_vertical">
		<ProgressBar android:layout_height="wrap_content"
			android:layout_width="wrap_content"></ProgressBar>
		<TextView android:textSize="16dp" android:text="@string/WaitDownloadPrompt"
			android:layout_marginLeft="10dp" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/downloading"
		android:visibility="gone" android:orientation="vertical">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/text" android:textSize="16dp"
				android:text="@string/Downloading" android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<TextView android:id="@+id/rate" android:textSize="16dp"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		</LinearLayout>
		<ProgressBar android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/seekBar"
			style="@android:style/Widget.ProgressBar.Horizontal" />
	</LinearLayout>
	<LinearLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:id="@+id/error"
		android:gravity="center_vertical" android:orientation="vertical"
		android:layout_weight="1" android:visibility="gone">
		<TextView android:text="@string/DownloadFailed"
			android:textSize="16dp" android:layout_marginLeft="5dp"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<ScrollView android:layout_width="wrap_content"
			android:layout_height="fill_parent">
			<TextView android:id="@+id/ErrorStr" android:textSize="14dp"
				android:layout_marginLeft="5dp" android:layout_width="wrap_content"
				android:layout_height="wrap_content"></TextView>
		</ScrollView>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:gravity="center_vertical"
		android:layout_marginTop="30dp">
		<Button android:id="@+id/BtnOK" android:text="@string/DownloadBackground"
			android:textSize="16dp" android:layout_weight="1"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<Button android:id="@+id/BtnCancel" android:text="@string/Cancel"
			android:textSize="16dp" android:layout_weight="1"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>